--- a/Cloud/rot-fe/index.html
+++ b/Cloud/rot-fe/index.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8" />
         <title>Rust of Things</title>
         <link data-trunk rel="css" href="dist/style.css" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     </head>
     <body>
         <div id="app"></div>
